--- a/styles.css
+++ b/styles.css
@@ -59,7 +59,7 @@ body{
 	position: fixed;
 	left: 0px;
 	height: 80px;
-	border-bottom: 3px solid none;
+	border-bottom: 3px solid whitesmoke;
 	z-index: 9990px;
 	animation: jud 1s forwards;
 	opacity: 0;
@@ -158,7 +158,6 @@ hr{
 	font-family: arial;
 	font-weight: bold;
 	font-size: 20px;
-	margin-left: 590px;
 	margin-top: -20px;
 	background-color: #19cbcf;
 	box-shadow: 2px 2px 1px 1px whitesmoke;
